# qt-hospital

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  app.h  app.qrc  app.ui  appsetting.h  main.cpp
src/pages/basedialog/: basedialog.cpp  basedialog.h  basedialog.ui
src/pages/dialogs/datepick/: datepickerpopup.cpp  datepickerpopup.h  datepickerpopup.ui
src/pages/dialogs/login/: loginpage.cpp  loginpage.h  loginpage.ui
src/pages/dialogs/messagedlg/: messagedlg.cpp  messagedlg.h  messagedlg.ui  messagepopdlg.cpp  messagepopdlg.h  messagepopdlg.ui  progressbardlg.cpp  progressbardlg.h  progressbardlg.ui
src/pages/dialogs/search/: searchdlg.cpp  searchdlg.h  searchdlg.ui
src/pages/doctor/: mainpage.cpp  mainpage.h  mainpage.ui
src/pages/doctor/pages/bedmanage/: bedmanage.cpp  bedmanage.h  bedmanage.ui
src/pages/doctor/pages/doctorword/: doctorword.cpp  doctorword.h  doctorword.ui
src/pages/doctor/pages/patientrecord/: patientrecord.cpp  patientrecord.h  patientrecord.ui
src/pages/doctor/pages/patientselect/: patientselect.cpp  patientselect.h  patientselect.ui
src/pages/outpatientservice/: alarmingrecorddialog.ui  outpatientservice.cpp  outpatientservice.h  outpatientservice.ui  recorddialog.cpp  recorddialog.h
src/pages/outpatientservice/pages/checkitempage/: checkitempage.cpp  checkitempage.h  checkitempage.ui
src/pages/outpatientservice/pages/checkitempage/dialogs/: bodycheckpage.cpp  bodycheckpage.h  checkselectdlg.cpp  checkselectdlg.h  checkselectdlg.ui  defaultpage.cpp  defaultpage.h  defaultpage.ui  imagecheckpage.cpp  imagecheckpage.h  laboratorycheckpage.cpp  laboratorycheckpage.h  othercheckpage.cpp  othercheckpage.h
src/pages/outpatientservice/pages/checkitempage/widgets/: checkitem.cpp  checkitem.h  checkitem.ui
src/pages/outpatientservice/pages/dealpage/: dealpage.cpp  dealpage.h  dealpage.ui
src/pages/outpatientservice/pages/medicinepage/: medicinepage.cpp  medicinepage.h  medicinepage.ui
src/pages/outpatientservice/pages/medicinepage/widgets/: medicinewidget.cpp  medicinewidget.h  medicinewidget.ui
src/pages/outpatientservice/pages/recordpage/: recordpage.cpp  recordpage.h  recordpage.ui
src/utils/: findposhelper.cpp  findposhelper.h  inputtester.h  nethelp.cpp  nethelp.h  printhelp.cpp  printhelp.h  singleton.h  windowframelesshelper.cpp  windowframelesshelper.h
src/widgets/customtableview/: customtableview.cpp  customtableview.h  headerdelegate.cpp  headerdelegate.h  tableviewdelegate.cpp  tableviewdelegate.h
src/widgets/messagehint/: messagehint.cpp  messagehint.h
